ChangeLog
*********

2014-05-23  Enrico M. Crisostomo  <enrico.m.crisostomo@gmail.com>

	release: stable major release 1.0.0:

	* .gitignore: Update .gitignore with recommended Objective C and XCode
	              exclusions.
    * ChangeLog:
      - Update.
    * Classes/EMCCountry.h: Add methods to get a localised country name.
    * Classes/EMCCountry.m: Add methods to get a localised country name.
    * Classes/EMCCountryDelegate.h: Refactor protocol.
	* Classes/EMCCountryPickerController.h: Make delegate an IBOutlet.
	* Classes/EMCCountryPickerController.m:
	  - Require ARC to compile.
	  - Issue warning to console if delegate is not set.
      - Refactor protocol.
    * EMCCountryPickerController.podspec: Bump v. 1.0.0.
    * EMCCountryPickerControllerDemo/*: Add demo project.
    * EMCCountryPickerControllerDemo/EMCCountryPickerControllerDemo.xcodeproj/project.pbxproj:
      - Add ChangeLog to XCode project.
      - Add EMCCountryPickerController.podspec to XCode project.
    * EMCCountryPickerControllerDemo/EMCCountryPickerControllerDemo/CPCViewController.m:
      - Refactor protocol.
    * README.md: Update.

2014-18-03  Enrico M. Crisostomo  <enrico.m.crisostomo@gmail.com>

    release: stable micro release 0.0.3:

	* ./*: Initial commit, moved from a private project.